fix more overflow bugs

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -144,6 +144,12 @@
   &.wrapper-banner {
     overflow: visible;
   }
+  .wrapper-hidden {
+    overflow: hidden;
+    width: 100%;
+    height: 100%;
+    position: relative;
+  }
   strong {
     font-family: 'Coachella Bold'
   }
