--- a/app/assets/stylesheets/components/_circle.scss
+++ b/app/assets/stylesheets/components/_circle.scss
@@ -33,4 +33,7 @@
   justify-content: flex-end;
   position: absolute;
   bottom: 0;
+  &.circle-left {
+    justify-content: flex-start;
+  }
 }
